--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "lint": "eslint .",
         "optimize": "vite optimize",
         "preview": "vite preview",
-        "migrate": "tsx scripts/migrate-data.ts"
+        "migrate": "tsx scripts/migrate-data.ts",
+        "github:list": "tsx scripts/list-github-projects.ts",
+        "github:analyze": "tsx scripts/analyze-github-repo.ts",
+        "analyze": "npm run build && tsx scripts/analyze-bundle.ts",
+        "build:analyze": "npm run build && npm run analyze"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
